# hmt

./: .boring  .hlint.yaml  Makefile  README  README.md  cabal.project  hmt.cabal
Help/: Makefile  hmt.help.lhs
Music/: Theory.hs
Music/Theory/: Array.hs  Bits.hs  Bjorklund.hs  Braille.hs  Byte.hs  Clef.hs  Combinations.hs  Directory.hs  Duration.hs  Dynamic_Mark.hs  Either.hs  Encode.hs  Enum.hs  Forte.hs  Function.hs  Gamelan.hs  IO.hs  Interval.hs  Key.hs  List.hs  Math.hs  Maybe.hs  Monad.hs  Opt.hs  Ord.hs  Parse.hs  Pct.hs  Permutations.hs  Pitch.hs  PitchClass.hs  Prime.hs  Rahn.hs  Read.hs  SRO.hs  Set.hs  Show.hs  Spelling.hs  String.hs  Table.hs  Tempo_Marking.hs  (+8 more)
Music/Theory/Array/: CSV.hs  Cell_Ref.hs  Direction.hs  MD.hs  Square.hs  Text.hs
Music/Theory/Array/CSV/: Midi.hs
Music/Theory/Block_Design/: Johnson_2007.hs
Music/Theory/Contour/: Polansky_1992.hs
Music/Theory/DB/: CSV.hs  Char.hs  Common.hs  JSON.hs  Plain.hs
Music/Theory/Db/: Cli.hs  Common.hs  Csv.hs  Json.hs  Plain.hs
Music/Theory/Diagram/: Grid.hs  Path.hs  Sequencer.hs
Music/Theory/Duration/: Annotation.hs  CT.hs  ClickTrack.hs  Hollos2014.hs  Name.hs  RQ.hs  Rq.hs
Music/Theory/Duration/Bel1990/: R.hs
Music/Theory/Duration/Name/: Abbreviation.hs
Music/Theory/Duration/RQ/: Division.hs  Tied.hs
Music/Theory/Duration/Rq/: Division.hs  Tied.hs
Music/Theory/Duration/Sequence/: Notate.hs
Music/Theory/Graph/: Bliss.hs  Deacon_1934.hs  Dot.hs  FGL.hs  Fgl.hs  G6.hs  IO.hs  Johnson_2014.hs  LCF.hs  LGL.hs  OBJ.hs  PLY.hs  Planar.hs  Type.hs
Music/Theory/Instrument/: Choir.hs  Names.hs
Music/Theory/Interval/: Barlow_1987.hs  Name.hs  Spelling.hs
Music/Theory/List/: Logic.hs
Music/Theory/Math/: Convert.hs  Nichomachus.hs  OEIS.hs  Oeis.hs  Prime.hs
Music/Theory/Math/Convert/: FX.hs  Fx.hs
Music/Theory/Meter/: Barlow_1987.hs
Music/Theory/Metric/: Buchler_1998.hs  Castren_1994.hs  Forte_1973.hs  Morris_1980.hs  Polansky_1996.hs
Music/Theory/PCT/: Drape_1999.hs  Forte_1973.hs  Morris_1987.hs  Parse.hs  Rahn_1980.hs  Read_1978.hs  SRO.hs  Table.hs
Music/Theory/Permutations/: List.hs  Morris_1984.hs
Music/Theory/Pitch/: Bark.hs  Chord.hs  Name.hs  Note.hs  Spelling.hs
Music/Theory/Pitch/Note/: Name.hs
Music/Theory/Pitch/Spelling/: Cluster.hs  Key.hs  Table.hs
Music/Theory/Random/: I_Ching.hs  Jones1981.hs  Jones_1981.hs
Music/Theory/Sequence/: Bastin_2012.hs
Music/Theory/Set/: List.hs  Set.hs
Music/Theory/Tiling/: Canon.hs  Johnson_2004.hs  Johnson_2009.hs
Music/Theory/Time/: Duration.hs  KeyKit.hs  Notation.hs  Seq.hs  Types.hs
Music/Theory/Time/Bel1990/: R.hs
Music/Theory/Time/KeyKit/: Basic.hs  Parser.hs
Music/Theory/Tuning/: Alves.hs  Alves_1997.hs  Anamark.hs  DB.hs  DX7.hs  Db.hs  Dx7.hs  EFG.hs  ET.hs  Efg.hs  Et.hs  Euler.hs  Gann.hs  Gann_1993.hs  Graph.hs  HS.hs  Hs.hs  Kurenniemi2003.hs  Load.hs  Meyer_1929.hs  Microtonal_Synthesis.hs  Midi.hs  Partch.hs  Polansky_1978.hs  Polansky_1984.hs  Polansky_1985c.hs  Polansky_1990.hs  Riley.hs  Rosenboom_1979.hs  Scala.hs  Sethares1994.hs  Sethares_1994.hs  Syntonic.hs  Table.hs  Type.hs  Werckmeister.hs  Wilson.hs
Music/Theory/Tuning/DB/: Alves.hs  Gann.hs  Microtonal_Synthesis.hs  Riley.hs  Werckmeister.hs
Music/Theory/Tuning/Db/: Alves.hs  Gann.hs  Microtonal_Synthesis.hs  Riley.hs  Werckmeister.hs
Music/Theory/Tuning/Graph/: Euler.hs  ISET.hs  Iset.hs
Music/Theory/Tuning/Midi/: Load.hs
Music/Theory/Tuning/Scala/: Cli.hs  Functions.hs  Interval.hs  Json.hs  KBM.hs  Kbm.hs  Meta.hs  Mode.hs
Music/Theory/Xenakis/: S4.hs  Sieve.hs
Music/Theory/Z/: Boros_1990.hs  Carter.hs  Castren_1994.hs  Clough_1979.hs  DK.hs  Drape_1999.hs  Forte_1973.hs  Lewin_1980.hs  Literature.hs  Morris_1974.hs  Morris_1987.hs  Rahn_1980.hs  Read_1978.hs  SRO.hs  Sro.hs  TTO.hs  Tto.hs
Music/Theory/Z/Drape_1999/: Cli.hs
Music/Theory/Z/Morris_1987/: Parse.hs
Music/Theory/Z12/: Castren_1994.hs  Drape_1999.hs  Forte_1973.hs  Lewin_1980.hs  Literature.hs  Morris_1974.hs  Morris_1987.hs  Operations.hs  Parse.hs  Rahn_1980.hs  Read_1978.hs  SRO.hs  TTO.hs  Table.hs
Music/Theory/Z12/Morris_1987/: Parse.hs
cmd/: Makefile  csv-midi.hs  db.hs  gl.hs  obj.hs  pct.hs  ply.hs  scala.hs
csv/instrument-names/: br.csv  kb.csv  str.csv  vc.csv  ww.csv
csv/mnd/: 1080-C01.csv
data/csv/combinatorics/: bagua.csv  yijing.csv
data/csv/mnd/: 1080-C01.csv  all-notes-off.csv
data/csv/tuning/: README  Rosenboon1979.csv  masina-consonance-data.csv  masina.csv
data/dot/: Makefile  euler-j5-b.dot  euler-j5.dot  tj_oh_p014.dot  tj_oh_p114.2.dot  tj_oh_p114.4.dot  tj_oh_p114.5.dot  tj_oh_p114.9.dot  tj_oh_p131.dot  tj_oh_p148.0.dot  tj_oh_p148.2.dot  tj_oh_p148.4.dot  tj_oh_p148.5.dot  tj_oh_p162.dot  tj_oh_p172.0.dot  tj_oh_p172.1.dot  tj_oh_p177.1.dot  tj_oh_p177.2.dot
data/dot/deacon/: A_G.dot  A_GC.dot  A_GD.dot  A_GF.dot  A_GL.dot  B_G.dot  B_GC.dot  B_GD.dot  B_GF.dot  B_GL.dot  C_G.dot  C_GC.dot  C_GD.dot  C_GF.dot  C_GL.dot  D_G.dot  D_GC.dot  D_GD.dot  D_GF.dot  D_GL.dot  E_G.dot  E_GC.dot  E_GD.dot  E_GF.dot  E_GL.dot  F_G.dot  F_GC.dot  F_GD.dot  F_GF.dot  F_GL.dot  G_G.dot  G_GC.dot  G_GD.dot  G_GF.dot  G_GL.dot  H_G.dot  H_GC.dot  H_GD.dot  H_GF.dot  H_GL.dot  (+10 more)
data/dot/euler/: Makefile  euler-j7.dot  euler-wtp.dot
data/dot/tj/oh/: mk.sh  tj_oh_p012.1.dot  tj_oh_p012.2.dot  tj_oh_p014.1.dot  tj_oh_p014.2.dot  tj_oh_p014.3.dot  tj_oh_p031.dot  tj_oh_p114.0.dot  (+33 more)
data/json/: README  forte-table.json  masina-consonance-data.json  rahn-table.json  scala-db.json  scala-intnam.json  scala-ji-tuning.json  scala-meta-au.js  scala-meta-au.json  scala-modenam.js  scala-modenam.json
data/scl/: et12.scl  et19.scl  et31.scl  et53.scl  et72.scl  et96.scl  ew_1357_3.scl  ew_Pelogflute_2.scl  ew_diamond_12.scl  ew_el12_12.scl  ew_el12_7.scl  ew_hel_12.scl  ew_novarotreediamond_1.scl  ew_poole.scl  ew_two_22_7.scl  ew_xen3b_3.scl  ew_xen456_9.scl  hanson_f2.scl  young-lm_piano_1964.scl
md/: csv-midi.md  db.md  gl.md  notes.md  obj.md  pct.md  ply.md  scala.md  video.md
mk/: mk-convert.hs  mk-scales.hs
(+6 files in other folders)
