Name:              hmt
Version:           0.12
Synopsis:          Haskell Music Theory
Description:       Haskell music theory library
License:           GPL
Category:          Music
Copyright:         Rohan Drape, 2006-2012
Author:            Rohan Drape
Maintainer:        rd@slavepianos.org
Stability:         Experimental
Homepage:          http://slavepianos.org/rd/?t=hmt
Tested-With:       GHC == 7.2.2
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README
                   Help/hmt.help.lhs

Library
  Build-Depends:   base==4.*,
                   colour,
                   containers,
                   hcg-minus==0.12.*,
                   html-minimalist==0.12.*,
                   multiset-comb,
                   parsec,
                   permutation,
                   primes,
                   split,
                   utf8-string,
                   xml
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Music.Theory.Bjorklund
                   Music.Theory.Block_Design.Johnson_2007
                   Music.Theory.Clef
                   Music.Theory.Contour.Polansky_1992
                   Music.Theory.Diagram.Grid
                   Music.Theory.Diagram.Path
                   Music.Theory.Duration
                   Music.Theory.Duration.Annotation
                   Music.Theory.Duration.Name
                   Music.Theory.Duration.Name.Abbreviation
                   Music.Theory.Duration.RQ
                   Music.Theory.Duration.RQ.Tied
                   Music.Theory.Duration.Sequence.Notate
                   Music.Theory.Dynamic_Mark
                   Music.Theory.Interval
                   Music.Theory.Interval.Barlow_1987
                   Music.Theory.Interval.Name
                   Music.Theory.Interval.Spelling
                   Music.Theory.Key
                   Music.Theory.Meter.Barlow_1987
                   Music.Theory.Parse
                   Music.Theory.Pct
                   Music.Theory.Permutations
                   Music.Theory.Pitch
                   Music.Theory.Pitch.Name
                   Music.Theory.Pitch.Spelling
                   Music.Theory.PitchClass
                   Music.Theory.Prime
                   Music.Theory.Set
                   Music.Theory.Table
                   Music.Theory.Tempo_Marking
                   Music.Theory.Time_Signature
                   Music.Theory.Tuning
                   Music.Theory.Tuning.Alves_1997
                   Music.Theory.Tuning.Polansky_1984
                   Music.Theory.Tuning.Polansky_1990
                   Music.Theory.Xenakis.S4
                   Music.Theory.Xenakis.Sieve

Source-Repository  head
  Type:            darcs
  Location:        http://slavepianos.org/rd/sw/hmt
